--- a/themes/vno/_config.yml
+++ b/themes/vno/_config.yml
@@ -90,7 +90,7 @@ blog_button:
 # Navigation buttons in the front page.
 nav:
     - {title: archive, description: archive, url: '/archives'}
-    - {title: old site, description: old site, url: '/'}
+    - {title: old site, description: old site, url: 'old.brusport.com'}
 
 # you can visit http://dev.duoshuo.com get duoshuo user id.
 duoshuo_info:
